fixed header, added navbar.  working on aligning photo and content

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,18 +6,39 @@ height: 200px;
     background-color: lightblue;
 }
  .jumbotron {
-     height: 500px;
-    
+    height: 670px;
+    background: url("../images/backgrounds/workspace.jpeg") no-repeat center;
+    background-size: cover;
+    justify-content: center;
+    margin:0px;
+    padding:0px;
+    border:0px;
  }
 
-body, .jumbotron, div, h1, h2, h3, p, ul, img, form, fieldset, input, textarea {
-    margin:0;
-    padding:0;
-    border:0;
 
+    
+
+body h1 {
+    
+    font-family: 'Megrim', cursive;
 }
 
-body {
-    background: 
-    font:
+nav {
+    float: right;
+    display: block !important;
+}
+
+#container {
+    width: 960px;
+    margin: 0 auto;
+}
+
+#logo {
+    margin: 10px auto 0 auto;
+    position: relative;
+    width: 183px;
+}
+
+img {
+float: right;
 }
